fix some small issues